--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,12 +165,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 30px auto;
+    margin-bottom: 30px;
+}
+
+.categories-item {
+    display: flex;
+    width: 160px;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .categories-list {
     display: flex;
     justify-content: space-between;
+    padding: 0;
 }
 
 .categories-link {
@@ -179,9 +187,7 @@ body {
     line-height: 24px;
     text-decoration: none;
     color: #000000;
-    display: flex;
-    width: 160px;
-    margin: 0 auto;
+    letter-spacing: -0.02em;
 }
 
 
@@ -331,6 +337,7 @@ body {
 .footer-container {
     display: flex;
     justify-content: space-between;
+}
 
 .footer-link {
     font-family: "Raleway", sans-serif;
