--- a/styles/styles.css
+++ b/styles/styles.css
@@ -310,14 +310,14 @@ body {
     height: 388px;
 }
 
-/* .advantages-container::before {
+.advantages-container::before {
     content: "";
     position: absolute;
     background-color: #f0f0f0;
     width: 100%;
     height: 288px;
     z-index: -1;
-} */
+}
 
 .advanvantages-content-container {
     display: flex;
@@ -728,12 +728,13 @@ body {
 }
 
 .name-filter-container {
+    position: relative;
     grid-area: name-filter-container;
     background-color: #dcdcdc;
     padding-left: 60px;
 }
 
-/* .name-filter-container::before {
+.name-filter-container::before {
     content: "";
     position: absolute;
     background-color: #dcdcdc;
@@ -741,7 +742,7 @@ body {
     height: 100%;
     right: 0;
     z-index: -1;
-} */
+}
 
 .catalog-products-subtitle {
     font-family: "Raleway", sans-serif;
@@ -756,6 +757,7 @@ body {
 }
 
 .filter-container {
+    position: relative;
     grid-area: filter-container;
     background-color: #ebebeb;
     padding-left: 60px;
@@ -767,7 +769,7 @@ body {
     margin-right: 70px;
 }
 
-/* .filter-container::before {
+.filter-container::before {
     content: "";
     position: absolute;
     background-color: #ebebeb;
@@ -775,7 +777,7 @@ body {
     height: 100%;
     right: 0;
     z-index: -1;
-} */
+}
 
 .catalog-filter-title {
     font-family: "Rubik", sans-serif;
@@ -841,9 +843,10 @@ body {
     display: flex;
     align-items: center;
     margin-bottom: 70px;
+    position: relative;
 }
 
-/* .sorting-type::before {
+.sorting-type::before {
     content: "";
     position: absolute;
     background-color: #ebebeb;
@@ -851,7 +854,7 @@ body {
     height: 100%;
     left: 0;
     z-index: -1;
-} */
+}
 
 .sorting-type-item {
     margin-left: 70px;
