--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,7 @@ body {
 .user-navigation-list {
     margin: 0;
     padding: 0;
+    height: 21px;
     margin-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
@@ -126,7 +127,7 @@ body {
 
 .user-navigation-item-search {
     width: 516px;
-    height: 40px;
+    height: 20px;
     margin-right: 24px;
 }
 
@@ -160,7 +161,7 @@ body {
     line-height: 19px;
     text-align: center;
     width: 160px;
-    height: 40px;
+    height: 20px;
     margin: 0;
     padding: 0;
     border: none;
@@ -210,23 +211,21 @@ body {
     text-align: right;
 }
 
-.user-navigation-item-basket::before {
+.number-basket-item {
     font-family: "Rubik";
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    position: absolute;
-    content: "2";
     width: 21px;
     height: 21px;
     background-color: #ffffff;
     border-radius: 50%;
-    left: -16px;
-    top: -2px;
+    position: absolute;
+    top: 0;
+    left: -15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Нижнее меню */
@@ -305,28 +304,51 @@ body {
     margin: 0;
 }
 
-.slider-container::before {
+.slider-button-container {
+    position: relative;
+    width: 560px;
+    height: 560px;
+}
+
+.slider-button {
+    height: 60px;
+    width: 20px;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    margin: 0;
+    padding: 0;  
+}
+
+.slider-button:hover {
+    opacity: 0.6;
+}
+
+.slider-button:focus {
+    border: 2px solid #AF4FFF;
+    border-radius: 6px;
+}
+
+.slider-button:active {
+    opacity: 0.3;
+}
+
+.slider-next {
     content: "";
     position: absolute;
     background-image: url(../images/slider/slider-button-left.svg);
     background-repeat: no-repeat;
-    top: 250px;
+    top: 230px;
     left: 19px;
-    height: 60px;
-    width: 20px;
-    cursor: pointer;
 }
 
-.slider-container::after {
+.slider-prev {
     content: "";
     position: absolute;
     background-image: url(../images/slider/slider-button-right.svg);
     background-repeat: no-repeat;
-    top: 250px;
-    right: 619px;
-    height: 60px;
-    width: 20px;
-    cursor: pointer;
+    top: 230px;
+    right: 19px;
 }
 
 .slider-container-text {
@@ -336,6 +358,12 @@ body {
     align-items: flex-start;
     justify-content: start;
     width: 560px;
+}
+
+/* Скрыл остальные слайды для дальнейшей реализации */
+.slider-2,
+.slider-3 {
+    display: none;
 }
 
 .slider-1::before {
@@ -374,7 +402,7 @@ body {
     color: #ffffff;
 }
 
-slider-3::before {
+.slider-3::before {
     content: "03";
     position: absolute;
     width: 250px;
@@ -482,10 +510,6 @@ slider-3::before {
     cursor: pointer;
 }
 
-.slider-first {
-    position: relative;
-}
-
 /* Категория товаров */
 .categories {
     margin-bottom: 70px;
@@ -530,11 +554,12 @@ slider-3::before {
 
 
 /* Список преимуществ */
+.advantages {
+    margin-bottom: 70px;
+}
+
 .advantages-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    height: 388px;
+    position: relative;
 }
 
 .advantages-container::before {
@@ -543,19 +568,18 @@ slider-3::before {
     background-color: #f0f0f0;
     width: 100%;
     height: 288px;
+    top: 100px;
 }
 
 .advanvantages-content-container {
-    position: relative;
     display: flex;
-    width: 1095px;
-    height: 250px;
     margin: 0;
-    margin-bottom: 70px;
     padding: 0;
+    padding-top: 70px;
+    padding-bottom: 69px;
 }
 
-.advantages-buttons-container {
+.advantages-button-container {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -563,7 +587,7 @@ slider-3::before {
     margin-top: 19px;
 }
 
-.advantages-buttons-container::before {
+.advantages-button-container::before {
     position: absolute;
     content: "";
     top: 70px;
@@ -575,7 +599,8 @@ slider-3::before {
 
 }
 
-.advantages-buttons {
+.advantages-button {
+    position: relative;
     font-family: "Raleway";
     font-weight: 800;
     font-size: 18px;
@@ -585,14 +610,100 @@ slider-3::before {
     text-transform: uppercase;
     width: 160px;
     height: 20px;
-    background-color: #ffe17f;
     margin-bottom: 45px;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    z-index: 1;
+}
+
+.advantages-button:hover {
+    position: relative;
+    background-color: #ffc700;
+    height: 40px;
+}
+
+.advantages-button::before {
+    position: absolute;
+    content: "";
+    background-color: #ffc700;
+    width: 160px;
+    height: 8px;
+    top: 8px;
+    left: 0;
+    z-index: -1;
+}
+
+.advantages-button.advantages-button-current {
+    position: relative;
+    background-color: #000000;
+    color: #ffe17f;
+    height: 40px;
+    z-index: 1;
+}
+
+.advantages-button-current::after {
+    position: absolute;
+    content: "";
+    background-color: #000000;
+    width: 120px;
+    height: 40px;
+    left: 160px;
+    top: 0;
 }
 
 .advantages-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.advantages-item-1 {
+    position: relative;
+}
+
+.advantages-item-1::after {
+    position: absolute;
+    content: "";
+    background-image: url(../images/advantage/delivery.svg);
+    background-repeat: no-repeat;
+    top: 0;
+    left: 560px;
+    width: 136px;
+    height: 164px;
+}
+
+/* Временно скроем для дальнейшей реализации */
+.advantages-item-2 {
+    position: relative;
+    display: none;
+}
+
+.advantages-item-2::after {
+    position: absolute;
+    content: "";
+    background-image: url(../images/advantage/garanty.svg);
+    background-repeat: no-repeat;
+    top: 0;
+    left: 560px;
+    width: 171px;
+    height: 195px;
+}
+
+.advantages-item-3 {
+    position: relative;
+    display: none;
+}
+
+.advantages-item-3::after {
+    position: absolute;
+    content: "";
+    background-image: url(../images/advantage/credit.svg);
+    background-repeat: no-repeat;
+    top: 0;
+    left: 560px;
+    width: 156px;
+    height: 188px;
 }
 
 .advantages-title {
@@ -613,28 +724,13 @@ slider-3::before {
     padding: 0;
 }
 
-
 /* Кнопка доставки над секцией контактов */
 .delivery-button {
-    margin-top: 90px;
     margin-bottom: 97px;
 }
 
 .delivery-button-container {
     position: relative;
-}
-
-.delivery-button-container::before {
-    position: absolute;
-    content: "";
-    width: 125px;
-    height: 100px;
-    background-color: #ffe17f;
-    background-image: url(../images/delivery-button.svg);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    top: 0;
-    left: 0;
 }
 
 .delivery-button-container::after {
@@ -671,6 +767,18 @@ slider-3::before {
     height: 100px;
 }
 
+.delivery-link::before {
+    position: absolute;
+    content: "";
+    width: 125px;
+    height: 100px;
+    background-color: #ffe17f;
+    background-image: url(../images/delivery-button.svg);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    top: 0;
+    left: 0;
+}
 
 /* Контакты */
 .contacts {
@@ -832,6 +940,7 @@ slider-3::before {
 .subscription-form-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .subscription-form {
