--- a/styles/styles.css
+++ b/styles/styles.css
@@ -315,18 +315,14 @@ body {
     width: 20px;
     cursor: pointer;
     border: none;
+    outline: none;
     background: transparent;
     margin: 0;
-    padding: 0;  
+    padding: 0;
 }
 
 .slider-button:hover {
     opacity: 0.6;
-}
-
-.slider-button:focus {
-    border: 2px solid #AF4FFF;
-    border-radius: 6px;
 }
 
 .slider-button:active {
@@ -342,6 +338,16 @@ body {
     left: 19px;
 }
 
+.slider-next:focus {
+    width: 40px;
+    height: 80px;
+    border: 2px solid #af4fff;
+    border-radius: 6px;
+    background-position: center;
+    top: 220px;
+    left: 9px;
+}
+
 .slider-prev {
     content: "";
     position: absolute;
@@ -349,6 +355,16 @@ body {
     background-repeat: no-repeat;
     top: 230px;
     right: 19px;
+}
+
+.slider-prev:focus {
+    width: 40px;
+    height: 80px;
+    border: 2px solid #af4fff;
+    border-radius: 6px;
+    background-position: center;
+    top: 220px;
+    right: 9px;
 }
 
 .slider-container-text {
@@ -442,7 +458,9 @@ body {
 }
 
 .slider-link {
+    position: relative;
     width: 220px;
+    height: 20px;
     margin-bottom: 70px;
     text-align: center;
     font-family: "Raleway", sans-serif;
@@ -452,7 +470,41 @@ body {
     color: #000000;
     text-transform: uppercase;
     text-decoration: none;
+    outline: none;
+}
+
+.slider-link::before {
+    position: absolute;
+    content: "";
     background-color: #ffe17f;
+    width: 220px;
+    height: 8px;
+    top: 6px;
+    left: 0;
+    z-index: -1;
+}
+
+.slider-link:active {
+    background-color: #ffe17f;
+    height: 20px;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.slider-link:focus::before {
+    position: absolute;
+    content: "";
+    background-color: #af4fff;
+    width: 220px;
+    height: 8px;
+    top: 6px;
+    left: 0;
+    z-index: -1;
+}
+
+.slider-link:hover::before {
+    background-color: #ffe17f;
+    height: 40px;
+    top: -10px;
 }
 
 .slider-table {
@@ -497,11 +549,29 @@ body {
     height: 12px;
     margin: 0;
     padding: 0;
-    background: #FFFFFF;
+    background: #ffffff;
     border: 2px solid #000000;
     border-radius: 50%;
     cursor: pointer;
+    outline: none;
 }
+
+.slider-pagination-button:focus {
+    border: 2px solid #af4fff;
+    border-radius: 50%;
+}
+
+.slider-pagination-button:hover {
+    border: 2px solid #000000;
+    opacity: 0.6;
+}
+
+
+.slider-pagination-button:active {
+    border: 2px solid #000000;
+    opacity: 0.3;
+}
+
 
 .slider-pagination-button-current {
     background-color: #000000;
@@ -584,7 +654,7 @@ body {
     display: flex;
     flex-direction: column;
     margin-right: 240px;
-    margin-top: 9px;
+    margin-top: 19px;
 }
 
 .advantages-button-container::before {
@@ -610,11 +680,13 @@ body {
     letter-spacing: 0.2em;
     text-transform: uppercase;
     width: 160px;
-    height: 40px;
-    margin-bottom: 25px;
+    height: 20px;
+    margin-bottom: 45px;
     border: none;
+    outline: none;
     cursor: pointer;
     background: transparent;
+    padding: 0;
     z-index: 1;
 }
 
@@ -624,34 +696,77 @@ body {
     background-color: #ffc700;
     width: 160px;
     height: 8px;
-    top: 16px;
+    top: 6px;
     left: 0;
     z-index: -1;
 }
 
-.advantages-button:hover {
+.advantages-button:hover::before {
     background-color: #ffc700;
     height: 40px;
-    z-index: 1;
+    top: -8px;
 }
 
-.advantages-button.advantages-button-current {
-    position: relative;
-    background-color: #000000;
+.advantages-button:focus::before {
+    background-color: #af4fff;
+    height: 8px;
+    top: 6px;
+    left: 0;
+    z-index: -1;
+}
+
+.advantages-button:active {
     color: #ffe17f;
+}
+
+.advantages-button:active::before {
+    background-color: #000000;
     height: 40px;
-    z-index: 1;
+    width: 160px;
+    top:-8px;
+}
+
+.advantages-button-current {
+    position: relative;
+    color: #ffe17f;
+}
+
+.advantages-button-current::before {
+    position: absolute;
+    content: "";
+    background-color: #000000;
+    height: 40px;
+    width: 160px;
+    top:-8px;
+    z-index: -1;
+}
+
+.advantages-button-current:active::before {
+    background-color: #000000;
+    height: 40px;
+    width: 160px;
+    top:-8px;
+    z-index: -1;
+}
+
+.advantages-button-current:focus::before {
+    position: absolute;
+    content: "";
+    background-color: #000000;
+    height: 40px;
+    width: 160px;
+    top:-8px;
+    z-index: -1;
 }
 
 .advantages-button-current::after {
     position: absolute;
     content: "";
-    background-color: #000000;
     width: 120px;
     height: 40px;
+    top: -8px;
     left: 160px;
-    top: 0;
-    z-index: 1;
+    background-color: #000000;
 }
 
 .advantages-list {
@@ -871,7 +986,7 @@ body {
     text-transform: uppercase;
     text-decoration: none;
     color: #000000;
-    background-color: #ffe17f;
+    height: 20px;
 }
 
 .contacts-subtitle {
@@ -902,6 +1017,7 @@ body {
 }
 
 .contacts-button {
+    position: relative;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     line-height: 21px;
@@ -909,11 +1025,45 @@ body {
     text-transform: uppercase;
     text-decoration: none;
     color: #000000;
-    background-color: #ffe17f;
     width: 260px;
+    height: 20px;
     text-align: center;
+    outline: none;
 }
 
+.contacts-button::before {
+    position: absolute;
+    content: "";
+    background-color: #ffe17f;
+    width: 260px;
+    height: 8px;
+    top: 6px;
+    left: 0;
+    z-index: -1;
+}
+
+.contacts-button:active {
+    background-color: #ffe17f;
+    height: 20px;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.contacts-button:focus::before {
+    position: absolute;
+    content: "";
+    background-color: #af4fff;
+    width: 260px;
+    height: 8px;
+    top: 6px;
+    left: 0;
+    z-index: -1;
+}
+
+.contacts-button:hover::before {
+    background-color: #ffe17f;
+    height: 40px;
+    top: -10px;
+}
 
 /* Подписка на рассылку */
 .subscription {
